--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ numpy==1.22.3
 pandas==1.4.3
 scikit_learn==1.2.0
 scipy==1.8.1
-torch==2.0.1+cu118
+torch==2.0.1 --index-url https://download.pytorch.org/whl/cu118
 xgboost==2.0.2
